--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "use-window-blur-change-title",
   "version": "1.0.0",
   "description": "React Hook for set the page title when the user is shifting focus away from the current window.",
+  "keywords": [
+    "react",
+    "react-hook",
+    "react-window-blur",
+    "change-document-title"
+  ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "author": "cyntler",
