--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-window-blur-change-title",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React Hook for set the page title when the user is shifting focus away from the current window.",
   "keywords": [
     "react",
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "git+https://github.com/cyntler/use-window-blur-change-title.git"
   },
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
     "start": "tsc --watch",
     "build": "rimraf ./lib && tsc",
@@ -24,27 +27,26 @@
     "test": "jest",
     "prepublish": "npm run lint && npm run prettier && npm run test && npm run build"
   },
+  "dependencies": {
+    "@types/react": "^17.0.3",
+    "react": "^17.0.1"
+  },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.7.3",
     "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "react": "^17.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.2",
     "typescript": "^4.1.5"
   },
   "peerDependencies": {
     "react": ">=16.8"
-  },
-  "engines": {
-    "node": ">=10"
   }
 }
