--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "react-window-blur",
     "change-document-title"
   ],
+  "author": "Damian Cyntler",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "author": "cyntler",
   "license": "MIT",
   "repository": {
     "type": "git",
