--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint": "eslint ./ --ext=tsx,ts",
     "prettier": "prettier --check 'src/**/*.{ts,tsx}'",
     "test": "jest",
-    "prepublishOnly": "npm run lint && npm run prettier && npm run test && npm run build"
+    "prepublishOnly": "npm run lint && npm run prettier && npm run test && npm run build",
+    "release": "npm version patch && git push && git push --tags && npm publish"
   },
   "dependencies": {
     "@types/react": "^17.0.3",
